[gd_scene load_steps=13 format=3 uid="uid://brc0n53gxf2sq"]

[ext_resource type="Script" path="res://Scripts/Lights.gd" id="1_27tap"]
[ext_resource type="Script" path="res://Scripts/Level.gd" id="1_o6kjo"]
[ext_resource type="FontFile" uid="uid://b6d5w7yj7b525" path="res://Resources/SourceHanSansSC-Bold.otf" id="2_n81cn"]
[ext_resource type="Theme" uid="uid://cel18xkchmafq" path="res://Resources/UI_Button.tres" id="2_p0we7"]
[ext_resource type="Script" path="res://Scripts/Button.gd" id="4_8o7fq"]
[ext_resource type="FontFile" uid="uid://dinddkudv7mfy" path="res://Resources/SourceHanSansSC-Normal.otf" id="6_tc88b"]
[ext_resource type="Theme" uid="uid://cc776rspw52yb" path="res://Resources/Submit_Button.tres" id="7_7u64s"]
[ext_resource type="Script" path="res://Scripts/Submit_Button.gd" id="8_40c68"]
[ext_resource type="Texture2D" uid="uid://7pcb5yav0168" path="res://Resources/Possibility_Button.png" id="9_qng6m"]
[ext_resource type="Script" path="res://Scripts/Possibility_Button.gd" id="9_v0lqs"]
[ext_resource type="Texture2D" uid="uid://vl24cl1db66a" path="res://Resources/P.png" id="10_k7u7j"]
[ext_resource type="Texture2D" uid="uid://cmfw1tk1fdd8k" path="res://Resources/NP.png" id="11_f6qul"]

[node name="intro1" type="Node2D"]
script = ExtResource("1_o6kjo")

[node name="Background" type="ColorRect" parent="."]
z_index = -10
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.0313726, 0.101961, 0.0313726, 1)

[node name="Lights" type="Node2D" parent="."]
script = ExtResource("1_27tap")
metadata/color = Color(0.333333, 0.709804, 0.333333, 1)

[node name="UI" type="ReferenceRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0

[node name="Back" type="Button" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 75.0
offset_bottom = 75.0
focus_mode = 0
theme = ExtResource("2_p0we7")
script = ExtResource("4_8o7fq")

[node name="Label" type="Label" parent="UI/Back"]
layout_mode = 0
offset_left = 10.0
offset_top = -1.0
offset_right = 53.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("2_n81cn")
theme_override_font_sizes/font_size = 50
text = "↩"

[node name="Title" type="Label" parent="UI"]
offset_left = 100.0
offset_top = 16.0
offset_right = 254.0
offset_bottom = 65.0
theme_override_colors/font_shadow_color = Color(0.333333, 1, 0.333333, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("6_tc88b")
theme_override_font_sizes/font_size = 33
text = "Level Title"

[node name="Submit_Background" type="ColorRect" parent="UI"]
offset_left = 419.0
offset_top = 600.0
offset_right = 419.0
offset_bottom = 680.0

[node name="Submit" type="Button" parent="UI/Submit_Background"]
layout_mode = 1
offset_right = 442.0
offset_bottom = 80.0
focus_mode = 0
theme = ExtResource("7_7u64s")
theme_override_fonts/font = ExtResource("2_n81cn")
theme_override_font_sizes/font_size = 36
text = "SUBMIT (HOLD)"
script = ExtResource("8_40c68")

[node name="Text" type="ReferenceRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2

[node name="Label" type="Label" parent="Text"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -344.0
offset_top = 10.0
offset_right = 344.0
offset_bottom = 164.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("6_tc88b")
theme_override_font_sizes/font_size = 23
text = "这一章的主题是可能性。
如果题目描述的事件是可能发生的（一定发生的也算可能发生），
则鼠标左键点击绿色框，以回答\"P\"（Possible）；
否则右键点击绿色框，以回答\"NP\"（Not Possible）。"
horizontal_alignment = 1
autowrap_mode = 1
clip_text = true

[node name="Problem1" type="Node2D" parent="."]
position = Vector2(266, 327)

[node name="Text" type="Label" parent="Problem1"]
offset_left = 25.0
offset_top = -27.0
offset_right = 653.0
offset_bottom = 22.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("6_tc88b")
theme_override_font_sizes/font_size = 33
text = "1. 掷出一标准硬币，其落地后正面朝上。"

[node name="Input" type="TextureButton" parent="Problem1" groups=["Inputs"]]
offset_left = 679.0
offset_top = -29.0
offset_right = 733.0
offset_bottom = 25.0
toggle_mode = true
button_mask = 3
texture_normal = ExtResource("9_qng6m")
script = ExtResource("9_v0lqs")
metadata/answer = "P"

[node name="P" type="Sprite2D" parent="Problem1/Input"]
visible = false
position = Vector2(31, 22)
scale = Vector2(0.813433, 0.813433)
texture = ExtResource("10_k7u7j")

[node name="NP" type="Sprite2D" parent="Problem1/Input"]
visible = false
position = Vector2(28, 31)
scale = Vector2(0.813433, 0.813433)
texture = ExtResource("11_f6qul")

[connection signal="solve_level" from="." to="UI/Submit_Background/Submit" method="solve_level"]
[connection signal="button_down" from="UI/Back" to="UI/Back" method="button_down"]
[connection signal="button_up" from="UI/Back" to="UI/Back" method="return_normal"]
[connection signal="mouse_entered" from="UI/Back" to="UI/Back" method="hovered"]
[connection signal="mouse_exited" from="UI/Back" to="UI/Back" method="return_normal"]
[connection signal="pressed" from="UI/Back" to="." method="exit_level"]
[connection signal="button_down" from="UI/Submit_Background/Submit" to="UI/Submit_Background/Submit" method="button_down"]
[connection signal="button_up" from="UI/Submit_Background/Submit" to="UI/Submit_Background/Submit" method="return_normal"]
[connection signal="mouse_entered" from="UI/Submit_Background/Submit" to="UI/Submit_Background/Submit" method="hovered"]
[connection signal="mouse_exited" from="UI/Submit_Background/Submit" to="UI/Submit_Background/Submit" method="return_normal"]
[connection signal="button_down" from="Problem1/Input" to="Problem1/Input" method="button_down"]
[connection signal="button_up" from="Problem1/Input" to="Problem1/Input" method="released"]
[connection signal="mouse_entered" from="Problem1/Input" to="Problem1/Input" method="hovered"]
[connection signal="mouse_exited" from="Problem1/Input" to="Problem1/Input" method="return_normal"]
[connection signal="pressed" from="Problem1/Input" to="Problem1/Input" method="pressed"]
[connection signal="state_changed" from="Problem1/Input" to="UI/Submit_Background/Submit" method="check_all_answered"]
